samples/_failures_safe/1761318141_435b55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89bf4009.c: In function ‘main’:
./samples/SAFE/__tmp_89bf4009.c:133:20: error: missing terminating " character
  133 |             printf("Matrix
      |                    ^~~~~~~
./samples/SAFE/__tmp_89bf4009.c:133:13: error: expected expression at end of input
  133 |             printf("Matrix
      |             ^~~~~~
./samples/SAFE/__tmp_89bf4009.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89bf4009.c:133:13: error: expected declaration or statement at end of input
